force-app/main/default/objects/LeanData__Upload_Lead__c/LeanData__Upload_Lead__c.object-meta.xml
<CustomObject>
    <label>Upload Lead</label>
    <nameField>
        <label>Upload Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>