force-app/main/default/objects/LeanData__Upload_Lead__c/fields/LeanData__CSV_Row_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__CSV_Row_Id__c</fullName>
    <externalId>true</externalId>
    <label>CSV Row Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>