force-app/main/default/objects/LeanData__Upload_Lead__c/fields/LeanData__Email__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>