force-app/main/default/objects/LeanData__Upload_Lead__c/fields/LeanData__Rel_Lead_Lookup__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Rel_Lead_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead Lookup</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LA Related Lead Lookup</relationshipLabel>
    <relationshipName>LA_Related_Lead_Lookup</relationshipName>
    <type>Lookup</type>
</CustomField>