force-app/main/default/objects/LeanData__Upload_Lead__c/fields/LeanData__Source_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Source_Id__c</fullName>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>